objects/dupcheck__dcLayout__c.object
<CustomObject>
    <fields>
        <fullName>dupcheck__Order__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__layout__c</fullName>
        <label>layout</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__prefix__c</fullName>
        <label>Object Prefix</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__recordType__c</fullName>
        <label>Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Duplicate Check Layout</label>
    <nameField>
        <displayFormat>DCLAY{000}</displayFormat>
        <label>Duplicate Check Layout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Check Layouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>